--- a/Dom1/t7.html
+++ b/Dom1/t7.html
@@ -36,7 +36,7 @@
         let p=document.querySelector("#ps");
         let s=document.querySelector(".formm");//after filling the data in the all the containers in the  form then only submit the data,.....  
         s.addEventListener("submit",function(obj){
-           obj.preventDefault(); //obj  parameter is nothing but accessing the event when it is the event is triggered and creating an object and taking that event as an property (submit) in that object.     
+           obj.preventDefault(); //obj  parameter is nothing but accessing the event when it is the triggered and creating an object and taking that event as an property (submit) in that object.     
             //obj is also known as argument object
             /*Why we are using this preventDefault method ?*/
             //preventing the behaviour of the submit button, when i tap on the submit button the page automaticlly get refreshed,due to this i'm unable to get that subbmited data,because at every time 
