--- a/Dom1/t7.html
+++ b/Dom1/t7.html
@@ -47,7 +47,7 @@
             ok.password=pp;//assigning or adding the properties into the object
             console.log(ok);//If you want to check whether the given properties(property:value) is added in the object are not
 
-            u.value=p.value="";//After submit the data I don't want to show in that data in the username container and password container
+            u.value=p.value="";//After submit the data I don't want to show that data in the username container and password container
             //re-initiallization happens
       
             
