--- a/Dom1/t7.html
+++ b/Dom1/t7.html
@@ -36,6 +36,7 @@
         let p=document.querySelector("#ps");
         let s=document.querySelector(".formm");//after filling the data in the all the containers in the  form then only submit the data,.....  
         s.addEventListener("submit",function(obj){
+            //console.log(obj);//submitEvent object
            obj.preventDefault(); //obj  parameter is nothing but accessing the event when it is  triggered and creating an object and the event listner knows what type of the event is ?,....(SUBMIT EVENT OBJECT)    
             //obj is also known as argument object
             /*Why we are using this preventDefault method ?*/
