--- a/Dom1/t7.html
+++ b/Dom1/t7.html
@@ -43,7 +43,7 @@
             //preventing the behaviour of the submit button, when i tap on the submit button the page automaticlly get refreshed,due to this i'm unable to get that subbmited data,because at every time 
             let uu=u.value;//here i get submited data
             let pp=p.value;//here i get submited data
-            let ok={};// one object is created under the name ok - In the future i will make some validations by using this data in this object
+            let ok={};// one object is created under the name ok - In the future i will make some validations by using this data in this object-backend
             ok.username=uu; //assigning or adding the properties into the object
             ok.password=pp;//assigning or adding the properties into the object
             console.log(ok);//If you want to check whether the given properties(property:value) is added in the object are not
