--- a/Dom1/t8.html
+++ b/Dom1/t8.html
@@ -95,6 +95,7 @@
 
 
         document.addEventListener("keyup",function(poojitha){
+            //console.log(poojitha);//keyupEvent Object is displayed
             if (poojitha.key=="Escape" && !h.classList.contains("hide")){
                 hidden();
             }
