--- a/Dom1/t8.html
+++ b/Dom1/t8.html
@@ -93,9 +93,9 @@
 
         });
 
-
+//tap ESC in the keyboard and esc is nothing but Escape and escape is noting but closing the current work or page or task or event
         document.addEventListener("keyup",function(poojitha){  
-            //console.log(poojitha);//keyupEvent Object is displayed and in that keyUp event object there is a property (Escape) when the event is triggered
+            //console.log(poojitha);//keyupEvent Object is displayed and in that keyUp event object there is a property (Escape) when the event is triggered and the perpose of poojitha(object) parameter in the function is,... to accepting the keyup event property (escape),.....
             if (poojitha.key=="Escape" && !h.classList.contains("hide")){
                 hidden();
             }
