--- a/Dom1/t3.html
+++ b/Dom1/t3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pooj vk</title>
+    <title>v</title>
     <style>
         *{
             text-align: center;
